src/components/sections/HowItWorks/HowItWorks.module.css
.rectangle {
  margin-top: 6rem;
  width: 100%;
  height: 4035px;
}

.header {
  background-image: url("../../../assets/images/HeaderBackground.svg");
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 77rem;
  height: 26.25rem;
}

.header__squeare_text {
  background-color: rgba(255, 255, 255, 1);
  border-radius: 6.25rem;
  padding: 0.875rem 1.25rem;
  line-height: 1rem;
  font-family: Poppins;
  color: #141414;
  font-size: 1rem;
  font-weight: 600;
}
.header__title {
  color: rgba(255, 255, 255, 1);
  text-align: center;
  font-family: Inter;
  font-size: 4rem;
  font-weight: 700;
  line-height: 4rem;
  letter-spacing: -0.05rem;
  margin-top: 0.81rem;
  margin-bottom: 0;
  width: 60%;
}

.steps {
  display: flex;
  flex-direction: column;
  gap: 12.12rem;
}

.steps__one {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.content__text {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 2.5rem;
  background-color: rgba(255, 255, 255, 1);
  width: 41.125rem;
  height: 24.6875rem;
  border-radius: 2rem;
  box-shadow: 0px 40px 40px 0px rgba(20, 20, 20, 0.04);
}

.text__container{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
  gap: 2.5rem;
}

.content__number {
  color: #4842fb;
  font-family: Poppins;
  font-size: 8rem;
  font-style: normal;
  font-weight: 600;
  line-height: 100%;
}

.container__text {
  width: 65%;
}

.container__text__title {
  color: #4842fb;
  font-family: Inter;
  font-size: 2.5rem;
  font-style: normal;
  font-weight: 700;
  line-height: 110%; /* 2.75rem */
  letter-spacing: -0.05rem;
  text-align: start;
  margin-top: 0.5rem;
  margin-bottom: 1.25rem;
}

.container__text__paragraph {
  color: #444;
  font-family: Poppins;
  font-size: 1.125rem;
  font-style: normal;
  font-weight: 500;
  line-height: 150%;
  margin-top: 0;
  text-align: start;
  margin-bottom: 0.75rem;
}

.container__text__anchor {
  color: #4842fb;
  font-family: Poppins;
  font-size: 1.125rem;
  font-style: normal;
  font-weight: 600;
  text-align: start;

  line-height: 150%; /* 1.6875rem */
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-decoration-skip-ink: auto;
  text-decoration-thickness: auto;
  text-underline-offset: auto;
  text-underline-position: from-font;
}

.macImg{
  position: relative;
  right: 4rem;
  scale: 1.1;

}
.steps__two {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  justify-content: space-between;
}

.stepTwo__container__color {
  background-color: #4842fb;
}

.stepTwo__number__color {
  color: #d3ff3c;
}

.stepTwo__title__color {
  color: #d3ff3c;
}

.stepTwo__paragraph__color {
  color: #fff;
}

.stepTwo__anchor__color {
  color: #d3ff3c;
}

